--- a/image file.html
+++ b/image file.html
@@ -1,11 +1,11 @@
 <svg onload="makeDraggable(evt)" viewBox="0 0 369 492" width="242" height="323">
 	<g id="inner" transform="scale(0.74), translate(78.22594142259416, 4.117154811715494)">
-		<!--<image x="0" y="0" class="draggable img-fluid" style="cursor:move; transform: rotate( 0rad ); width:100%; height:100%"
-		   xlink:href="/static/cart/images/mars2.png"></image>-->
-	<image height="100%" width="100%" xlink:href="blob:http://127.0.0.1:8000/05ec6691-e34a-4b44-bb65-d65131adc1ba" 
-		x="78.22594142259416" y="4.117154811715494" class="draggable img-fluid" style="cursor:move; transform: rotate( 0rad );" 
-		visibility="visible">
-	</image></g>
+		
+		<image height="100%" width="100%" xlink:href="blob:http://127.0.0.1:8000/05ec6691-e34a-4b44-bb65-d65131adc1ba" 
+			x="78.22594142259416" y="4.117154811715494" class="draggable img-fluid" style="cursor:move; transform: rotate( 0rad );" 
+			visibility="visible">
+		</image>
+	</g>
 </svg>
 
 <script>
